--- a/2-Agency/index.html
+++ b/2-Agency/index.html
@@ -9,7 +9,7 @@
 <script defer src=https://memory.community/js/code-title.ce4a43f09239a9efb48fee342e8ef2df.min.js></script>
 <script defer src=https://memory.community/js/clipboard.2913da76d3cb21c5deaa4bae7da38c9f.min.js></script>
 <script defer src=https://memory.community/js/callouts.87dc3cde028d05f527004bdcf4348a1d.min.js></script>
-<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!0,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.a02e8fe8f45b19aa766477435e065621.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.589ddec6c5030d618232fafb619a08a3.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=(e=document)=>{addCopyButtons(),addTitleToCodeBlocks(),renderMathInElement(e.body,{delimiters:[{left:"$$",right:"$$",display:!0},{left:"$",right:"$",display:!1}],macros:{'’':"'"},throwOnError:!1})}</script><script type=module>
+<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!0,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.a02e8fe8f45b19aa766477435e065621.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.79663c519601ce6cc171d2d6f53aeb89.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=(e=document)=>{addCopyButtons(),addTitleToCodeBlocks(),renderMathInElement(e.body,{delimiters:[{left:"$$",right:"$$",display:!0},{left:"$",right:"$",display:!1}],macros:{'’':"'"},throwOnError:!1})}</script><script type=module>
     import { attachSPARouting } from "https:\/\/memory.community\/js\/router.d6fe6bd821db9ea97f9aeefae814d8e7.min.js"
     attachSPARouting(init, render)
   </script><script defer data-domain=memory.community src=https://plausible.io/js/script.js></script>
@@ -46,8 +46,8 @@ the breadth of their scope must be balanced by a reverence for local
 agency. Our systems of government have become incomprehensible to us
 precisely because they extend us no trust and leave no room for
 <a href=https://www.researchgate.net/publication/273580417_A_Study_on_Dialogic_Communication_Trust_and_Distrust_Testing_a_Scale_for_Measuring_Organization-Public_Dialogic_Communication_OPDC target=_blank rel=noopener>dialogue</a>.
-Thankfully, there are effective systems of affectionate and
-collaborative placemaking emerging as
+Thankfully, effective systems of affectionate and
+collaborative placemaking are emerging as
 <a href=https://mises.org/wire/fight-state-build-alternatives-state target=_blank rel=noopener>alternatives</a>
 to the escalation of intractable
 <a href=https://en.wikipedia.org/wiki/Globalization_and_Its_Discontents target=_blank rel=noopener>externalities</a>
@@ -89,8 +89,7 @@ differences between the things, by lumping together&mldr; in a way which
 may be very significant for the specific decision.</p><p>&mdash; FA Hayek, <em>The Use of Knowledge in Society</em></p></blockquote><a href=#overestimating-rationality><h3 id=overestimating-rationality><span class=hanchor arialabel=Anchor></span>Overestimating Rationality</h3></a><p>A social theory called the
 <a href=https://en.wikipedia.org/wiki/Garbage_can_model target=_blank rel=noopener>Garbage Can
 Model</a>
-describes the messy reality of organizational decision making at scale
-well. This model suggests that, despite their intentions, groups of
+describes the messy reality of organizational decision-making at scale. This model suggests that, despite their intentions, groups of
 people don&rsquo;t typically make decisions by agreeing on a problem,
 developing a
 <a href=https://forum.effectivealtruism.org/posts/T975ydo3mx8onH3iS/ea-is-about-maximization-and-maximization-is-perilous target=_blank rel=noopener>perfect
@@ -111,13 +110,13 @@ G.March</a></p></blockquote><a href=#overestimating-capability><h3 id=overestima
 fallacy</a>
 is a related mental model that describes the tendency of individuals and
 institutions to underestimate the time, costs, and risks associated with
-completing a task, often in spite of past experiences. While those
+completing a task, often despite past experiences. While those
 involved may blame this poor judgment on a
 <a href=https://www.nyu.edu/about/news-publications/news/2007/october/study_reveals_how_the_brain.html target=_blank rel=noopener>basic human
 tendency</a>
 for optimism, the phenomenon is also likely related to professionals who
 believe themselves more capable than the population they are planning
-for&mdash;no matter the local intricacies (and <em>of course</em> unrelated to the
+for&mdash;no matter the local intricacies (and, <em>of course</em>, unrelated to the
 influence and money that might
 <a href="https://www.youtube.com/watch?v=BMGr4yyE1uc&t=1843s" target=_blank rel=noopener>flow through
 them</a>).
@@ -134,7 +133,7 @@ place</a>
 was a result of prioritizing central planning over-sensitivity to local
 neighborhoods.</p><p>Originally set for completion in 1998 at an estimated cost of $7.4
 billion, the project instead stretched on nearly a decade longer and
-cost over 21.5 billion (adjusted for inflation), making it the most
+cost over $21.5 billion (adjusted for inflation), making it the most
 expensive highway project in the history of the United States. In
 addition to delays and overrun costs, the project was mired with
 criminal charges and even a death.</p><p>While
