deploy: 1eab24e52c2689d07ac45879a1f0da821d62b402

--- a/4-Time/index.html
+++ b/4-Time/index.html
@@ -9,7 +9,7 @@
 <script defer src=https://memory.community/js/code-title.ce4a43f09239a9efb48fee342e8ef2df.min.js></script>
 <script defer src=https://memory.community/js/clipboard.2913da76d3cb21c5deaa4bae7da38c9f.min.js></script>
 <script defer src=https://memory.community/js/callouts.87dc3cde028d05f527004bdcf4348a1d.min.js></script>
-<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!0,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.a02e8fe8f45b19aa766477435e065621.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.79663c519601ce6cc171d2d6f53aeb89.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=(e=document)=>{addCopyButtons(),addTitleToCodeBlocks(),renderMathInElement(e.body,{delimiters:[{left:"$$",right:"$$",display:!0},{left:"$",right:"$",display:!1}],macros:{'’':"'"},throwOnError:!1})}</script><script type=module>
+<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!0,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.a02e8fe8f45b19aa766477435e065621.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.150c2a8e6f5d9865a004ca44b5043a0d.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=(e=document)=>{addCopyButtons(),addTitleToCodeBlocks(),renderMathInElement(e.body,{delimiters:[{left:"$$",right:"$$",display:!0},{left:"$",right:"$",display:!1}],macros:{'’':"'"},throwOnError:!1})}</script><script type=module>
     import { attachSPARouting } from "https:\/\/memory.community\/js\/router.d6fe6bd821db9ea97f9aeefae814d8e7.min.js"
     attachSPARouting(init, render)
   </script><script defer data-domain=memory.community src=https://plausible.io/js/script.js></script>
@@ -26,12 +26,12 @@ as we build local community memory&mdash;traditions of knowledge transfer
 edified by our relationship to that which came before us, and which
 comes after. Without these traditions, our rootlessness leads our
 children to increasingly fragile dependence.</p><a href=#place-in-time-and-time-in-place><h2 id=place-in-time-and-time-in-place><span class=hanchor arialabel=Anchor></span>Place in Time and Time in Place</h2></a><p>A culture can be understood as an accumulation of its people&rsquo;s various
-traditions&mdash;of language, land-stewardship, cooking, gathering, and many
+traditions&mdash;of language, land stewardship, cooking, gathering, and many
 other practices. Stewart Brand&rsquo;s
 <a href=https://jods.mitpress.mit.edu/pub/issue3-brand/release/2 target=_blank rel=noopener>conception</a>
 of pace layering below describes society&rsquo;s nested, polycentric
 orientation to time, with slow-changing natural systems and their
-resulting cultures at the core. Here we can see that affection for our
+resulting cultures at the core. Here, we can see that affection for our
 place not only grounds our relationship to each other and limits, but
 also to time.</p><div style=text-align:center><img src=/media/image7.png height><div style=text-align:left;display:inline-block;width:70%><text style="font-style: italic; font-size: .9em;">Pace Layering Visualized</text></div></div><p>As our cultural center
 <a href=https://www.entrepreneur.com/science-technology/a-world-of-difference-the-transformation-from-physical-to/430683 target=_blank rel=noopener>moves</a>
@@ -110,7 +110,7 @@ country to the city, from the city to the suburbs, from the suburbs
 back to the country or back to the city. And because we have never
 known well enough, or worked well enough, where we were, this has
 almost always been a movement from old damage to new destruction, and
-always with the aim of 'a better future for our children.'</p><p>&mdash; Wendell Berry, <i>The Art of Loading Brush</i></p></blockquote><p>Generational thinking avoids the kind of overuse and excess that
+always with the aim of 'a better future for our children'.</p><p>&mdash; Wendell Berry, <i>The Art of Loading Brush</i></p></blockquote><p>Generational thinking avoids the kind of overuse and excess that
 sacrifices
 <a href=https://twitter.com/jgcfyi/status/1504923071286759428 target=_blank rel=noopener>the future for the
 present</a>,
@@ -194,7 +194,7 @@ origin</a>
 traditional local processes.</p><p>Agave distillates (including mezcal) have historically been produced by
 families in small batches for
 <a href="http://maestrosdelmezcal.com/blog#:~:text=Chances-are-you,the-flavor-itself" target=_blank rel=noopener>their
-village</a>)
+village</a>
 and personal network. Small mezcaleros typically do not have the money,
 legal literacy, or social capital to have their work certified as
 &lsquo;official&rsquo; mezcal by
