--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script defer src=https://memory.community/js/code-title.ce4a43f09239a9efb48fee342e8ef2df.min.js></script>
 <script defer src=https://memory.community/js/clipboard.2913da76d3cb21c5deaa4bae7da38c9f.min.js></script>
 <script defer src=https://memory.community/js/callouts.87dc3cde028d05f527004bdcf4348a1d.min.js></script>
-<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!0,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.2ea5e0bde956802f0d5bb154dc2567d6.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.3805e9a7adf2fbc58fb52e1b535ad873.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=(e=document)=>{addCopyButtons(),addTitleToCodeBlocks(),renderMathInElement(e.body,{delimiters:[{left:"$$",right:"$$",display:!0},{left:"$",right:"$",display:!1}],macros:{'’':"'"},throwOnError:!1})}</script><script type=module>
+<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!0,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.2ea5e0bde956802f0d5bb154dc2567d6.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.5220bedbc8f3817ee332f09cea9fb287.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=(e=document)=>{addCopyButtons(),addTitleToCodeBlocks(),renderMathInElement(e.body,{delimiters:[{left:"$$",right:"$$",display:!0},{left:"$",right:"$",display:!1}],macros:{'’':"'"},throwOnError:!1})}</script><script type=module>
     import { attachSPARouting } from "https:\/\/memory.community\/js\/router.d6fe6bd821db9ea97f9aeefae814d8e7.min.js"
     attachSPARouting(init, render)
   </script><script defer data-domain=memory.community src=https://plausible.io/js/script.js></script>
@@ -19,35 +19,35 @@ technological approaches to collaborative coordination can support a
 &lsquo;community memory&rsquo; grounded in affectionate relationship to each other
 and our places over generations. These locally derived traditions of
 placemaking can help build more resilient communities and reduce our
-reliance on disempowering institutions.</blurb></p><div>~~ &#9675; ~~ &#9829; ~~ &#9675; ~~ &#127757; ~~ &#9675; ~~ &#9829; ~~ &#9675; ~~ &#127757; ~~</div><p>Below, you can find a link to each of the essays in the series.<br>Before diving in, you can go
-<a href=/Philosophy/ rel=noopener class=internal-link data-src=/Philosophy/><strong>here</strong></a> for a short brief on my general philosphy of writing and approach to this project.</p><p>👫🏡👪 ✊✊✊ 🍃🍄🌾 ⌛⌛⌛ 🛠🛠🛠 🏃🏃🏃</p><h6 id=1-relationship1-relationship>1.
-<a href=/1-Relationship/ rel=noopener class=internal-link data-src=/1-Relationship/><strong>Relationship</strong></a></h6><p>Despite the proliferation of impersonal organizational structures and
+reliance on disempowering institutions.</blurb></p><p>~~ ~~ ~~ ~~</p><p>Below, you can find a link to each of the essays in the series.<br>Before diving in, you can go
+<a href=/Philosophy/ rel=noopener class=internal-link data-src=/Philosophy/><strong>here</strong></a> for a short brief on my general philosphy of writing and approach to this project.</p><p>~~ ~~ ~~ ~~</p><h6 id=1-relationship1-relationship->1.
+<a href=/1-Relationship/ rel=noopener class=internal-link data-src=/1-Relationship/><strong>Relationship</strong></a> 🏡</h6><p>Despite the proliferation of impersonal organizational structures and
 abstract global economies, only the mutual extension of
 trust&mdash;grounded in affection for our home places&mdash;can foster
 traditions of placemaking strong enough to steward our communities
-sustainably through generations. 🏡</p><h6 id=2--agency2-agency>2.
-<a href=/2-Agency/ rel=noopener class=internal-link data-src=/2-Agency/><strong>Agency</strong></a></h6><p>Life-giving agency must be established through the kind of
+sustainably through generations.</p><h6 id=2--agency2-agency->2.
+<a href=/2-Agency/ rel=noopener class=internal-link data-src=/2-Agency/><strong>Agency</strong></a> ✊</h6><p>Life-giving agency must be established through the kind of
 spontaneous, trust-filled relationship that distant institutions are
 incapable of. Innovative organizational structures, in rhythm with
 natural ecologies, can scaffold these relationships into a more
-resilient organizational mycelium in support of our home places. ✊</p><h6 id=3-limits3-limits>3.
-<a href=/3-Limits/ rel=noopener class=internal-link data-src=/3-Limits/><strong>Limits</strong></a></h6><p>As globalized economies accumulate hidden existential debts,
+resilient organizational mycelium in support of our home places.</p><h6 id=3-limits3-limits->3.
+<a href=/3-Limits/ rel=noopener class=internal-link data-src=/3-Limits/><strong>Limits</strong></a> 🍃</h6><p>As globalized economies accumulate hidden existential debts,
 institutions seeking to control for risk instead reinforce our
 trajectory. Affectionate and empathetic relationship with the people
 and places around us can help more effectively build resilience and
-diffuse these risks. 🍄</p><h6 id=4-time4-time>4.
-<a href=/4-Time/ rel=noopener class=internal-link data-src=/4-Time/><strong>Time</strong></a></h6><p>Agency and limits both are strongly supported by traditions of
+diffuse these risks.</p><h6 id=4-time4-time->4.
+<a href=/4-Time/ rel=noopener class=internal-link data-src=/4-Time/><strong>Time</strong></a> ⌛</h6><p>Agency and limits both are strongly supported by traditions of
 generational knowledge transfer, rooted in specific place. Equilibrial
 investment and draw from local resources over generations grounds a
 community in time and place, giving joy in the present and assurance
-of the future. ⌛</p><h6 id=5-tools5-tools>5.
-<a href=/5-Tools/ rel=noopener class=internal-link data-src=/5-Tools/><strong>Tools</strong></a></h6><p>Our tools and technologies amplify our habits of relating to each
+of the future.</p><h6 id=5-tools5-tools->5.
+<a href=/5-Tools/ rel=noopener class=internal-link data-src=/5-Tools/><strong>Tools</strong></a> 🛠</h6><p>Our tools and technologies amplify our habits of relating to each
 other, our places, our organizational systems, and even time. More
 collaborative computing architectures can help us shed the prosthesis
 of institutional control and rebuild the locally-derived competency
-necessary to steward our places through generations. 🛠</p><h6 id=6-action6-action>6.
-<a href=/6-Action/ rel=noopener class=internal-link data-src=/6-Action/><strong>Action</strong></a></h6><p>Capable new tools for collaborative action are poised to shift
+necessary to steward our places through generations.</p><h6 id=6-action6-action->6.
+<a href=/6-Action/ rel=noopener class=internal-link data-src=/6-Action/><strong>Action</strong></a> 🏃</h6><p>Capable new tools for collaborative action are poised to shift
 sovereignty back to small communities at more appropriate fidelity of
 empowered placemaking. Together, these tools can help us build a
 persistent community memory capable of carrying our places forward
-with vitality. 🏃</p></article><div id=contact_buttons><footer><ul><li><a href=https://twitter.com/jgcfyi>Twitter</a></li><li><a href=https://jgc.fyi>jgc.fyi</a></li></ul></footer></div></div></body></html>
+with vitality.</p><br>👫🏡👪 ~~ ~~ 👫🏡👪 ~~ ~~ 👫🏡👪 ~~ ~~ 👫🏡👪 ~~ ~~ 👫🏡👪 ~~ ~~ 👫🏡👪 ~~ ~~ 👫🏡👪</article><div id=contact_buttons><footer><ul><li><a href=https://twitter.com/jgcfyi>Twitter</a></li><li><a href=https://jgc.fyi>jgc.fyi</a></li></ul></footer></div></div></body></html>
