--- a/2-Agency/index.html
+++ b/2-Agency/index.html
@@ -6,7 +6,7 @@
 <script defer src=https://memory.community/js/code-title.ce4a43f09239a9efb48fee342e8ef2df.min.js></script>
 <script defer src=https://memory.community/js/clipboard.2913da76d3cb21c5deaa4bae7da38c9f.min.js></script>
 <script defer src=https://memory.community/js/callouts.87dc3cde028d05f527004bdcf4348a1d.min.js></script>
-<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.adebf00ab02c49212d8299e1d4a6134e.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.22040676198e70ca8aa0f5e51fc7d777.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
+<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.adebf00ab02c49212d8299e1d4a6134e.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.714785bd387576e6023066de123409c0.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
     import { attachSPARouting } from "https:\/\/memory.community\/js\/router.d6fe6bd821db9ea97f9aeefae814d8e7.min.js"
     attachSPARouting(init, render)
   </script><script defer data-domain=memory.community src=https://plausible.io/js/script.js></script>
@@ -284,9 +284,7 @@ dilemma often
 justification</a>
 for formalized institutional intervention into resource management. It
 <a href="https://en.wikipedia.org/wiki/Tragedy_of_the_commons#:~:text=a-situation-in,resources.%5B3%5D" target=_blank rel=noopener>states</a>
-that without externally imposed rules,
-&lsquo;
-<a href=https://www.jstor.org/stable/2585925 target=_blank rel=noopener>rational</a>&rsquo;
+that without externally imposed rules, &lsquo;<a href=https://www.jstor.org/stable/2585925 target=_blank rel="noopener noreferrer">rational</a>&rsquo;
 individual users will overuse resources, depleting long-term and
 community-wide viability contrary to the common good of all users. This
 definition of rationality assumes an economy decoupled from
@@ -496,9 +494,7 @@ decision-making</a>,
 are one path forward. In what biologist
 <a href=https://en.wikipedia.org/wiki/Michael_Levin_%28biologist%29 target=_blank rel=noopener>Michael
 Levin</a>
-calls a &lsquo;
-<a href="https://www.youtube.com/watch?v=0a3xg4M9Oa8" target=_blank rel=noopener>multi-scale competency
-architecture</a>&rsquo;,
+calls a &lsquo;<a href="https://www.youtube.com/watch?v=0a3xg4M9Oa8&t=112s" target=_blank rel="noopener noreferrer">multi-scale competency architecture</a>&rsquo;,
 such aggregated patterns of autonomous local problem-solving are exactly
 how our bodies self-organize to perform as a whole.</p><blockquote><p>All intelligence is collective intelligence</p><p>&mdash;
 <a href="https://www.youtube.com/watch?v=p3lsYlod5OU&t=1185s" target=_blank rel=noopener>Michael Levin</a></p></blockquote><p>Advocated for by
