--- a/4-Time/index.html
+++ b/4-Time/index.html
@@ -6,7 +6,7 @@
 <script defer src=https://memory.community/js/code-title.ce4a43f09239a9efb48fee342e8ef2df.min.js></script>
 <script defer src=https://memory.community/js/clipboard.2913da76d3cb21c5deaa4bae7da38c9f.min.js></script>
 <script defer src=https://memory.community/js/callouts.87dc3cde028d05f527004bdcf4348a1d.min.js></script>
-<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.adebf00ab02c49212d8299e1d4a6134e.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.22040676198e70ca8aa0f5e51fc7d777.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
+<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.adebf00ab02c49212d8299e1d4a6134e.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.714785bd387576e6023066de123409c0.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
     import { attachSPARouting } from "https:\/\/memory.community\/js\/router.d6fe6bd821db9ea97f9aeefae814d8e7.min.js"
     attachSPARouting(init, render)
   </script><script defer data-domain=memory.community src=https://plausible.io/js/script.js></script>
@@ -124,9 +124,7 @@ may suggest. Instead, we can sustain our communities joyfully both
 through the present day and coming generations by leaning on place-based
 traditions as a foundation for agency, trust, and humility.</p><p>Instead of unsustainable growth by the accrual of existential debt,
 progress should be defined by a community&rsquo;s capacity to maintain the
-kind of equilibrium that allows it to &lsquo;
-<a href=https://en.wikipedia.org/wiki/Steady-state_economy#Herman_Daly%27s_concept_of_a_steady-state_economy target=_blank rel=noopener>rest upon the
-earth</a>&rsquo;.
+kind of equilibrium that allows it to &lsquo;<a href="https://en.wikipedia.org/wiki/Steady-state_economy#Herman_Daly's_concept_of_a_steady-state_economy" target=_blank rel="noopener noreferrer">rest upon the earth</a>&rsquo;.
 This locally emanating stability conveys more agency to adapt to a
 changing world than dependence on broad and abstract organizational
 structures.</p><blockquote><p>&ldquo;Because a thing is going strong now, it need not go strong for ever,&rdquo;
@@ -214,9 +212,7 @@ relationship</a> with and
 <a href=https://spiritsjournal.klwines.com/klwinescom-spirits-blog/2019/3/4/mezonte target=_blank rel=noopener>supporting</a>
 them. In fact, this is
 <a href="https://www.mezcalreviews.com/mezcal/mezonte-raicilla-japo/#:~:text=When-Mezonte-buys-a-batch-from-a-producer%2C-they-only-buy-60%25-of-the-batch-because-they-want-the-community-and-the-culture-of-the-community-to-continue-to-consume-and-enjoy-as-they-have-for-hundreds-of-years." target=_blank rel=noopener>regularly</a>
-true in the world of
-&lsquo;
-<a href=https://www.eater.com/22929882/mezcal-destilado-de-agave-distilling-indigenous-culture-oaxaca target=_blank rel=noopener>uncertified</a>&rsquo;
+true in the world of &lsquo;<a href=https://www.eater.com/22929882/mezcal-destilado-de-agave-distilling-indigenous-culture-oaxaca target=_blank rel="noopener noreferrer">uncertified</a>&rsquo;
 agave spirits, where
 <a href="https://www.youtube.com/watch?v=0F876l0VFc4" target=_blank rel=noopener>individual
 mezcaleros</a>
@@ -295,9 +291,7 @@ broader formal conventions of relationship.</p><a href=#new-technologies-and-loc
 sovereignty, tools for coordination surely have a place in any healthy
 society. Chapter 5 and 6 of this series will dig further into emerging
 technological pathways for the pursuit of endogenous
-sovereignty&mdash;including collaborative tools for &lsquo;
-<a href=https://twitter.com/buchmanster/status/1466092508316905478 target=_blank rel=noopener>community
-computing</a>&rsquo;
+sovereignty&mdash;including collaborative tools for &lsquo;<a href=https://twitter.com/buchmanster/status/1466092508316905478 target=_blank rel="noopener noreferrer">community computing</a>&rsquo;
 like
 <a href=https://www.investopedia.com/terms/b/blockchain.asp target=_blank rel=noopener>blockchains</a>
 and other
