--- a/6-Action/index.html
+++ b/6-Action/index.html
@@ -6,7 +6,7 @@
 <script defer src=https://memory.community/js/code-title.ce4a43f09239a9efb48fee342e8ef2df.min.js></script>
 <script defer src=https://memory.community/js/clipboard.2913da76d3cb21c5deaa4bae7da38c9f.min.js></script>
 <script defer src=https://memory.community/js/callouts.87dc3cde028d05f527004bdcf4348a1d.min.js></script>
-<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.002e944a46fc2bdad8b91401395e5ffd.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.2f9db11b42d68579cafde028012a11c1.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
+<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.002e944a46fc2bdad8b91401395e5ffd.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.2832be6575f5baaa1679d6a1c41b66d2.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
     import { attachSPARouting } from "https:\/\/memory.community\/js\/router.d6fe6bd821db9ea97f9aeefae814d8e7.min.js"
     attachSPARouting(init, render)
   </script><script defer data-domain=memory.community src=https://plausible.io/js/script.js></script>
@@ -88,7 +88,7 @@ control of an
 intuitive way to establish digital identity&mdash;and a more relational
 component of a locally sovereign web than monolithic state or
 <a href=https://worldcoin.org/ target=_blank rel=noopener>institution-based</a> identity
-systems. Immutable blockhains
+systems. Immutable blockchains
 <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4105763" target=_blank rel=noopener>stand</a>
 both to provide the infrastructure and cultural support for the
 implementation of these architectures. Because they aren&rsquo;t controlled by
@@ -230,7 +230,7 @@ of crypto&rsquo;s account-based foundation, a diverse set of tools of
 <a href=https://www.crowdwrite.xyz/ target=_blank rel=noopener>today</a>,
 <a href=https://twitter.com/metagov_project/status/1580231463353450500 target=_blank rel=noopener>ready</a>
 to be used similarly in our home places. With more trustworthy systems
-of digital identity, we might be able to make Github-style pull requests
+of digital identity, we might be able to make GitHub-style pull requests
 on
 <a href=https://en.wikipedia.org/wiki/Comprehensive_planning target=_blank rel=noopener>planning
 documents</a>
@@ -324,7 +324,7 @@ of
 funding</a>.
 In such a system, the value of services provided by an individual or
 group is estimated and paid for by participants after its
-implementation. Though not realistic for every endevor, this structure
+implementation. Though not realistic for every endeavor, this structure
 may push public projects to be more iterative and relational, serving as
 a possible antidote to unaccountable
 <a href=https://fred.stlouisfed.org/series/SLGSDODNS target=_blank rel=noopener>accumulation of
@@ -384,7 +384,7 @@ individual donors.</p><a href=#collective-ownership-and-action><h2 id=collective
 best when it is strongly supported by culture and tradition. In
 contrast, individual ownership is often the only legally and culturally
 supported mode of ownership today.</p><p>Though programmable money does allow the possibility of a more
-quantified and finacialized society, it also provides infrastructure for
+quantified and financialized society, it also provides infrastructure for
 collaborative, common ownership. In fact, tools for shared ownership and
 action have been core to blockchains
 <a href=https://blog.coinfund.io/community-ownership-as-a-blockchain-adoption-model-71a87f167de2 target=_blank rel=noopener>since</a>
