--- a/2-Agency/index.html
+++ b/2-Agency/index.html
@@ -6,7 +6,7 @@
 <script defer src=https://memory.community/js/code-title.ce4a43f09239a9efb48fee342e8ef2df.min.js></script>
 <script defer src=https://memory.community/js/clipboard.2913da76d3cb21c5deaa4bae7da38c9f.min.js></script>
 <script defer src=https://memory.community/js/callouts.87dc3cde028d05f527004bdcf4348a1d.min.js></script>
-<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.002e944a46fc2bdad8b91401395e5ffd.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.be85f68e3122ac2758b6c40940cfe7a0.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
+<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.002e944a46fc2bdad8b91401395e5ffd.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.44abed936787f96277c3a2d809af5c74.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
     import { attachSPARouting } from "https:\/\/memory.community\/js\/router.d6fe6bd821db9ea97f9aeefae814d8e7.min.js"
     attachSPARouting(init, render)
   </script><script defer data-domain=memory.community src=https://plausible.io/js/script.js></script>
@@ -25,9 +25,9 @@ we stabilize
 modern economies other than through
 <a href=https://en.wikipedia.org/wiki/Participatory_planning#Rational_planning_tradition target=_blank rel=noopener>rational</a>
 analysis and precise engineering by
-<a href=https://en.wikipedia.org/wiki/Sam_Bankman-Fried#Early_life_and_education target=_blank rel=noopener>well-credentialed</a>
+<a href=https://en.wikipedia.org/wiki/Sam_Bankman-Fried#Life target=_blank rel=noopener>well-credentialed</a>
 professionals?</p><p>It is clear, though, that trust in our
-<a href=https://www.pewresearch.org/politics/2022/06/06/public-trust-in-government-1958-2022/ target=_blank rel=noopener>institutions</a>
+<a href=https://web.archive.org/web/20250619123444/https://www.pewresearch.org/politics/2024/06/24/public-trust-in-government-1958-2024/ target=_blank rel=noopener>institutions</a>
 (and
 <a href=https://www.pewresearch.org/fact-tank/2019/07/22/key-findings-about-americans-declining-trust-in-government-and-each-other/ target=_blank rel=noopener>each
 other</a>)
