deploy: 5d4492e6873a327acc8f9976eda9c1b5e32cab69

--- a/5-Tools/index.html
+++ b/5-Tools/index.html
@@ -6,7 +6,7 @@
 <script defer src=https://memory.community/js/code-title.ce4a43f09239a9efb48fee342e8ef2df.min.js></script>
 <script defer src=https://memory.community/js/clipboard.2913da76d3cb21c5deaa4bae7da38c9f.min.js></script>
 <script defer src=https://memory.community/js/callouts.87dc3cde028d05f527004bdcf4348a1d.min.js></script>
-<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.002e944a46fc2bdad8b91401395e5ffd.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.19f7a18b7f62e6b350db4220dafaab54.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
+<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.002e944a46fc2bdad8b91401395e5ffd.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.12332ff66dac20cb7c5a2eb6b6ed186f.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
     import { attachSPARouting } from "https:\/\/memory.community\/js\/router.d6fe6bd821db9ea97f9aeefae814d8e7.min.js"
     attachSPARouting(init, render)
   </script><script defer data-domain=memory.community src=https://plausible.io/js/script.js></script>
@@ -216,7 +216,7 @@ coordination of self sovereign communities be
 learnable</a>
 by a broad enough demographic, otherwise they risk becoming
 infrastructure for the same kind of
-<a href=https://www.coindesk.com/layer2/2022/05/05/the-defi-mullet/ target=_blank rel=noopener>intermediaries</a>
+<a href=https://web.archive.org/web/20230610080459/https://www.coindesk.com/layer2/2022/05/05/the-defi-mullet// target=_blank rel=noopener>intermediaries</a>
 we rely on today to coordinate our economies. If made accessible,
 community computers and other collaborative technologies can mature
 knowledge sharing aspirations present in organizations like
@@ -336,7 +336,7 @@ Buterin</a></p></blockquote><p>These principles of self-determination are also t
 A lack of privacy can result in altered behavior&mdash;either through
 fearful self-censorship or due to intervention by surveilling
 institutions (of which the internet has a
-<a href=https://en.wikipedia.org/wiki/Magic_Lantern_%28software%29 target=_blank rel=noopener>long
+<a href=https://en.wikipedia.org/wiki/Magic_Lantern_%28spyware%29 target=_blank rel=noopener>long
 tradition</a>
 of).</p><p>Distributed systems that grant sovereignty and privacy by default make
 surveillance harder for states. What institutions may give up in
@@ -385,7 +385,7 @@ as the seminal &rsquo;theological&rsquo; work. Many of its
 lessons</a>
 for creating good open source software are also cultural cornerstones in
 the world of
-<a href="https://www.youtube.com/watch?v=eAMzAOhn1KY" target=_blank rel=noopener>crypto</a>,
+<a href="https://www.youtube.com/watch?v=ipWQ4w9pUkA" target=_blank rel=noopener>crypto</a>,
 including making &lsquo;users&rsquo; into collaborators, and the free sharing of
 code.</p><blockquote><p>In order to see spontaneous and creative growth, we need credibly
 neutral platforms on which to build, with low barriers for creation,
@@ -487,10 +487,10 @@ themselves play a part in imparting agency.</p></blockquote><a href=#cultural-di
 the
 <a href=https://theblockchainsocialist.com/talking-politics-with-vitalik-buterin-part-2/ target=_blank rel=noopener>tendency</a>
 in the world of crypto to favor censorship resistance and
-<a href=https://www.paradigm.xyz/2020/10/870 target=_blank rel=noopener>minimized
+<a href=https://web.archive.org/web/20240714012751/https://www.paradigm.xyz/2020/10/870 target=_blank rel=noopener>minimized
 governance</a> over
 social flexibility to achieve
-<a href="https://bank.dev/why#:~:text=Understanding-that-every-theoretical-incentive-incompatability-is-guaranteed-to-be-exploited." target=_blank rel=noopener>incorruptibility</a>.
+<a href="https://web.archive.org/web/20240310154035/bank.dev/why#:~:text=Understanding-that-every-theoretical-incentive-incompatability-is-guaranteed-to-be-exploited." target=_blank rel=noopener>incorruptibility</a>.
 The ability to make open, general purpose, permanent and uncensorable
 tools is important, but so is the ability to have
 <a href=https://venkatesh-rao.gitbook.io/summer-of-protocols/#_1znhggknfsxb target=_blank rel=noopener>stewardable</a>,
@@ -548,7 +548,7 @@ which seek to provide
 sovereignty at the community level, with more degrees of freedom in
 designing how to build and maintain social consensus&mdash;but also with
 more responsibility for maintaining
-<a href="https://v1.cosmos.network/intro#:~:text=A-sovereign-blockchain,has-limited-sovereignty." target=_blank rel=noopener>critical
+<a href="https://web.archive.org/web/20250125090007/https://v1.cosmos.network/intro#:~:text=A-sovereign-blockchain,has-limited-sovereignty." target=_blank rel=noopener>critical
 infrastructure</a>.</p><p>Together, these new foundations of community computing can help forge
 pathways of polycentric, cosmolocal agency propagation toward strong
 local resilience and community memory over generations&mdash;where specific
