deploy: c4c3a50369bb289f3365e5382fac0ecd65fa12f6

--- a/6-Action/index.html
+++ b/6-Action/index.html
@@ -6,7 +6,7 @@
 <script defer src=https://memory.community/js/code-title.ce4a43f09239a9efb48fee342e8ef2df.min.js></script>
 <script defer src=https://memory.community/js/clipboard.2913da76d3cb21c5deaa4bae7da38c9f.min.js></script>
 <script defer src=https://memory.community/js/callouts.87dc3cde028d05f527004bdcf4348a1d.min.js></script>
-<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.002e944a46fc2bdad8b91401395e5ffd.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.b9e7979a424c486c0b7b9f14025b679f.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
+<script>const SEARCH_ENABLED=!1,LATEX_ENABLED=!1,PRODUCTION=!0,BASE_URL="https://memory.community/",fetchData=Promise.all([fetch("https://memory.community/indices/linkIndex.002e944a46fc2bdad8b91401395e5ffd.min.json").then(e=>e.json()).then(e=>({index:e.index,links:e.links})),fetch("https://memory.community/indices/contentIndex.eaf308d7f721610d344348aa8eb23439.min.json").then(e=>e.json())]).then(([{index:e,links:t},n])=>({index:e,links:t,content:n})),render=()=>{const e=new URL(BASE_URL),t=e.pathname,n=window.location.pathname,a=t==n;addCopyButtons(),addTitleToCodeBlocks(),addCollapsibleCallouts(),initPopover("https://memory.community",!1);var s=document.getElementsByClassName("mermaid");s.length>0&&import("https://unpkg.com/mermaid@9/dist/mermaid.esm.min.mjs").then(e=>{e.default.init()});function o(n){const e=n.target,t=e.className.split(" "),s=t.includes("broken"),o=t.includes("internal-link");plausible("Link Click",{props:{href:e.href,broken:s,internal:o,graph:!1}})}const i=document.querySelectorAll("a");for(link of i)link.className.includes("root-title")&&link.addEventListener("click",o,{once:!0})},init=()=>{addCopyButtons(),addTitleToCodeBlocks()}</script><script type=module>
     import { attachSPARouting } from "https:\/\/memory.community\/js\/router.d6fe6bd821db9ea97f9aeefae814d8e7.min.js"
     attachSPARouting(init, render)
   </script><script defer data-domain=memory.community src=https://plausible.io/js/script.js></script>
@@ -604,7 +604,7 @@ currency that seeks to peg itself to the US Dollar), and
 (an experimental stable asset without a peg at all). Demand for global
 money is not going away, and many interesting experiments with this goal
 are
-<a href=https://bank.dev/ target=_blank rel=noopener>still developing</a>.</p><p>Of course,
+<a href=https://web.archive.org/web/20240226011549/http://bank.dev/ target=_blank rel=noopener>still developing</a>.</p><p>Of course,
 <a href=https://www.federalreserve.gov/cbdc-faqs.htm target=_blank rel=noopener>states
 themselves</a>
 are exploring how they might manage their own digital currencies. Today
@@ -618,7 +618,7 @@ it follows that new experiments in banks issuing their own
 on-chain</a> are
 consequential for our monetary system. One such experiment, a consortium
 of banks called
-<a href=https://www.usdfconsortium.com/ target=_blank rel=noopener>USDF</a>,
+<a href=https://web.archive.org/web/20250304002651/https://www.usdfconsortium.com/ target=_blank rel=noopener>USDF</a>,
 proposes to produce an interoperable money derived from deposits in its
 member banks. This, and
 <a href=https://blockworks.co/news/wyoming-could-be-first-us-state-to-issue-official-stablecoin target=_blank rel=noopener>other
@@ -737,7 +737,7 @@ new experiments on
 <a href="https://creditcommons.net/#:~:text=ledger-which-they-control" target=_blank rel=noopener>digital
 ledgers</a>
 are making such credit offset accessible to wider categories of
-communities.</p><p><a href=https://www.localloop.network/services/mtcs/ target=_blank rel=noopener>Mapping and
+communities.</p><p><a href=https://web.archive.org/web/20240225211519/https://www.localloop.network/services/mtcs/ target=_blank rel=noopener>Mapping and
 balancing</a>
 economic relationships on-chain can help communities understand the
 shape of their existing economy, build more healthy economic loops, and
@@ -751,7 +751,7 @@ of interoperable sovereign money.</p><p>Historically, mutual credit systems have
 is possible these responsibilities can be delegated to autonomous and
 transparent smart-contracts and managed through on-chain governance.
 Overall, DAO structures may help with
-<a href="https://discovery.rsm.nl/articles/368-digital-community-currencies-for-global-challenges/#:~:text=community-governance" target=_blank rel=noopener>governance</a>
+<a href="https://www.rsm.nl/discovery/2018/digital-community-currencies-for-global-challenges/#:~:text=2.-,Community-Governance,-The-second-issue" target=_blank rel=noopener>governance</a>
 of local currency, including visibility and management of who is able to
 originate, accept and spend the currency.</p><p>The use of community computing architectures to engage in more
 collective and localized sovereign control of monetary systems is more
@@ -766,11 +766,10 @@ people a way to exchange goods and services and incubate projects and
 businesses without relying on scarce national currency and volatile
 markets. Many other dedicated organizations are working towards these
 ends, including,
-<a href=https://opencredit.network/ target=_blank rel=noopener>Open Credit
-Network</a> and
+<a href=https://aboutcircles.com/ target=_blank rel=noopener>Circles</a> and
 <a href=https://www.mutualcredit.services/home target=_blank rel=noopener>Mutual Credit
 Services</a>.
-<a href=https://cofi.informal.systems/ target=_blank rel=noopener>CoFi</a> is a
+<a href=https://cycles.money/ target=_blank rel=noopener>Cycles</a> is a
 blockchain-based system working to build
 <a href=https://twitter.com/cyclesmoney target=_blank rel=noopener>on-chain
 infrastructure</a> to support
@@ -786,7 +785,7 @@ organizational structures in empathy for one another and their home
 places. The cultivation of these locally derived placemaking traditions
 safeguards the vitality of our communities, not just in the present but
 for generations to come.</p><p>How can we get there? Not by abandoning our homes to flee to
-<a href=https://www.cityofpraxis.com/ target=_blank rel=noopener>new</a>
+<a href=https://en.wikipedia.org/wiki/Praxis_%28proposed_city%29 target=_blank rel=noopener>new</a>
 <a href=https://twitter.com/alphaxbarry/status/1633176607031541761 target=_blank rel=noopener>communities</a>,
 nor in the unlikely prospect of
 <a href=https://twitter.com/jgcfyi/status/1503822879552688129 target=_blank rel=noopener>healing our
